# refcache

./: .gitignore  MANIFEST.in  README.md  docker-compose.yml  examples.py  pyproject.toml  pytest.ini  ruff.toml  run_tests.sh  setup.py
.github/workflows/: build.yml
cacheref/: README.md  __init__.py  cache.py  idextractor.py  orm.py  utils.py
cacheref/backends/: __init__.py  base.py  memory.py  redis.py
tests/: README.md  __init__.py  conftest.py  models.py  settings.py  test_django_integration.py  test_entity_cache.py  test_idextractor.py  test_memory_backend.py  test_redis_backend.py  test_redis_integration.py  test_sqlalchemy_integration.py
tests/test_app/: apps.py
tests/test_app/migrations/: 0001_initial.py  0002_delete_testmodel.py  0003_initial.py  0004_custompkmodel_stringpkmodel_uuidmodel_and_more.py
