[project]
name = "cacheref"
version = "0.1.0"
description = "A caching decorator that tracks entity references for precise invalidation"
authors = [
    {name = "Tamerlan",email = "tamerlan.abilov95@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "msgspec (>=0.19.0,<0.20.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
valkey-glide = "^1.3.1"
redis = "^5.2.1"
pytest-xdist = "^3.6.1"
ruff = "^0.9.9"

